--- a/src/style/login.module.css
+++ b/src/style/login.module.css
@@ -7,7 +7,7 @@
     align-items: center;
     height: 100%;
     width: auto;
-    margin-top: 231px;;
+    /* margin-top: 231px;; */
     font-size: 30px;
 
 }
@@ -19,7 +19,7 @@
     font-size: 30px;
 
 
-}
+} 
 
 .mainDiv input{
     width:230px;
@@ -35,3 +35,11 @@
     left:46vw;
 }
 
+.mainDiv{
+    background-image: url('/home/user/Pictures/orgOne/h2.jpg');
+    background-size: cover;
+    width:100vw;
+    height:100vh;
+    color:black;
+    font-size:20px;
+}
