--- a/src/style/login.module.css
+++ b/src/style/login.module.css
@@ -37,7 +37,7 @@
 
 .mainDiv{
     background-image: url('/home/user/Pictures/orgOne/h2.jpg');
-    background-size: cover;
+    background-size: contain;
     width:100vw;
     height:100vh;
     color:black;
