--- a/src/style/friend.module.css
+++ b/src/style/friend.module.css
@@ -36,10 +36,12 @@ input{
 }
 
 li{
-    border:1px solid blue;
+    border:1px solid yellow;
     padding:20px;
     font-weight:900;
-    color:black;
+    color:white;
+    background-color: rgb(0, 255, 115);
+
 }
 
 ul{
@@ -48,8 +50,10 @@ ul{
 
 .data{
     position:absolute;
-    top:70vh;
-    left:30vw;
+     top:70vh;
+    left:30vw; 
+   
+
 }
 
 .Error{
@@ -86,4 +90,10 @@ ul{
     position:absolute;
     top:50vh;
     left:45vw;
+}
+
+.data li{
+    color:black;
+    font-size: larger;
+    background-color: rgb(0, 255, 115);
 }
